# discord_bot

./: Cargo.toml  database.db
src/: main.rs
src/database/: definitions.rs
